--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -21,6 +21,7 @@
         android:text="默认皮肤"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleview"
+        android:background="@color/gy6"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
