--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@mipmap/ic_launcher"
+    android:background="@color/layout_bg_color"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -15,21 +15,32 @@
         android:layout_height="wrap_content">
         <Button
             android:id="@+id/huanfu"
+            android:background="@color/text_bg_color"
+            android:textColor="@color/text_color"
+            android:layout_marginStart="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="换肤"/>
         <Button
+            android:background="@color/text_bg_color"
+            android:textColor="@color/text_color"
+            android:layout_marginStart="@dimen/dp_10"
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="默认皮肤"/>
         <Button
+            android:background="@color/text_bg_color"
+            android:textColor="@color/text_color"
+            android:layout_marginStart="@dimen/dp_10"
             android:id="@+id/jumpToStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="跳到下一个界面"/>
     </LinearLayout>
     <TextView
+        android:layout_marginTop="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
         android:textColor="@color/gy1"
         android:background="@color/gy6"
         android:layout_width="wrap_content"
@@ -37,6 +48,8 @@
         android:text="Hello World!"
           />
     <TextView
+        android:layout_marginTop="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
         android:textColor="@color/gy2"
         android:background="@color/gy5"
         android:layout_width="wrap_content"
@@ -44,17 +57,22 @@
         android:text="Hello World!"
          />
     <TextView
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@mipmap/p_login_bg"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:text="Hello World!"
+        android:gravity="center"
+        android:textColor="@color/text_color"
+        android:text="这是textview，背景是一张图片"
           />
     <ImageView
+        android:layout_marginTop="@dimen/dp_10"
         android:layout_width="100dp"
-        android:layout_height="200dp"
+        android:layout_height="180dp"
         android:src="@mipmap/p_login_bg"
          />
     <TextView
+        android:layout_marginTop="@dimen/dp_10"
         android:drawableTop="@drawable/ic_mood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
