--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@mipmap/ic_launcher"
+    android:background="@color/layout_bg_color"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
@@ -16,15 +16,15 @@
         <Button
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
+            android:layout_marginStart="@dimen/dp_10"
             android:id="@+id/huanfu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="换肤"/>
         <Button
-            android:layout_marginStart="@dimen/dp_10"
-            android:layout_marginEnd="@dimen/dp_10"
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
+            android:layout_marginStart="@dimen/dp_10"
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,6 +32,7 @@
         <Button
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
+            android:layout_marginStart="@dimen/dp_10"
             android:id="@+id/jumpList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -56,7 +57,7 @@
         android:text="Hello World!"
           />
     <TextView
-        android:layout_marginTop="@dimen/dp_10"
+        android:textColor="@color/text_color"
         android:background="@mipmap/p_login_bg"
         android:layout_width="300dp"
         android:layout_height="100dp"
@@ -72,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="果园点金"
-        android:textColor="@color/text_color"
+        android:textColor="@color/gy6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
