--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -3,62 +3,86 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@mipmap/ic_launcher"
     android:layout_height="match_parent"
+    android:background="@color/layout_bg_color"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <Button
             android:id="@+id/jumpToTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="跳转到第三个界面"/>
+            android:layout_marginStart="5dp"
+            android:background="@color/button_bg_color"
+            android:text="跳转到第三个界面"
+            android:textColor="@color/text_color" />
+
         <Button
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="默认皮肤"/>
+            android:layout_marginStart="5dp"
+            android:background="@color/button_bg_color"
+            android:text="默认皮肤"
+            android:textColor="@color/text_color" />
+
         <Button
             android:id="@+id/ziti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="修改字体"/>
+            android:layout_marginStart="5dp"
+            android:background="@color/button_bg_color"
+            android:text="修改字体"
+            android:textColor="@color/text_color" />
+
         <Button
             android:id="@+id/zitichongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="默认字体"/>
+            android:layout_marginStart="5dp"
+            android:background="@color/button_bg_color"
+            android:text="默认字体"
+            android:textColor="@color/text_color" />
     </LinearLayout>
-    <TextView
-        android:textColor="@color/gy1"
-        android:background="@color/gy6"
+
+    <Button
+        android:layout_marginTop="@dimen/dp_10"
+        android:id="@+id/huanfu"
+        android:background="@color/text_bg_color"
+        android:textColor="@color/text_color"
+        android:layout_marginStart="@dimen/dp_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="换肤"/>
+
     <TextView
-        android:textColor="@color/gy2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/gy5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:padding="@dimen/dp_10"
         android:text="Hello World!"
+        android:textColor="@color/gy2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        android:background="@mipmap/p_login_bg"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:text="Hello World!"
+        android:layout_marginTop="@dimen/dp_10"
+        android:background="@mipmap/p_login_bg"
+        android:text="这是一个textview"
+        android:gravity="bottom|center"
+        android:textColor="@color/text_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -66,12 +90,25 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="200dp"
-        android:src="@mipmap/p_login_bg"
-         />
+        android:src="@mipmap/p_login_bg" />
     <TextView
-        android:drawableTop="@drawable/ic_mood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
+        android:background="@color/gy6"
+        android:padding="@dimen/dp_10"
+        android:text="Hello World!"
+        android:textColor="@color/gy1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawableTop="@drawable/ic_mood"
         android:text="果园点金"
         android:textColor="@color/gy6"
         app:layout_constraintBottom_toBottomOf="parent"
