--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SkinEngine" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.SkinEngine" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
+
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryDark">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
