--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,17 @@
             android:layout_height="wrap_content"
             android:text="跳到下一个界面"/>
     </LinearLayout>
+
+    <Button
+        android:textColor="@color/text_color"
+        android:background="@drawable/selector_white"
+        android:padding="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="这是一个selector"
+        />
+
     <TextView
         android:layout_marginTop="@dimen/dp_10"
         android:padding="@dimen/dp_10"
