--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -62,6 +62,17 @@
         android:layout_height="wrap_content"
         android:text="换肤"/>
 
+
+    <Button
+        android:textColor="@color/text_color"
+        android:background="@drawable/selector_white"
+        android:padding="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="这是一个selector"
+        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
