优化demo，完善简繁体

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="换肤"/>
+            android:text="@string/huanfu"/>
         <Button
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
@@ -28,7 +28,7 @@
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="默认皮肤"/>
+            android:text="@string/morenpifu"/>
         <Button
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
@@ -36,7 +36,7 @@
             android:id="@+id/jumpToStart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="跳到下一个界面"/>
+            android:text="@string/jumpTonext"/>
     </LinearLayout>
 
     <Button
@@ -46,7 +46,7 @@
         android:layout_marginTop="@dimen/dp_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这是一个selector"
+        android:text="@string/test1"
         />
 
     <TextView
@@ -56,7 +56,7 @@
         android:background="@color/gy6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/test2"
           />
     <TextView
         android:layout_marginTop="@dimen/dp_10"
@@ -65,7 +65,7 @@
         android:background="@color/gy5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/test3"
          />
     <TextView
         android:layout_marginTop="@dimen/dp_10"
@@ -74,7 +74,7 @@
         android:layout_height="100dp"
         android:gravity="center"
         android:textColor="@color/text_color"
-        android:text="这是textview，背景是一张图片"
+        android:text="@string/test4"
           />
     <ImageView
         android:layout_marginTop="@dimen/dp_10"
@@ -87,7 +87,15 @@
         android:drawableTop="@drawable/ic_mood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="国元点金"
+        android:text="@string/test5"
+        android:textColor="@color/gy7"
+          />
+    <TextView
+        android:layout_marginTop="@dimen/dp_10"
+        android:drawableTop="@drawable/ic_mood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/test5"
         android:textColor="@color/gy7"
           />
 
