--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -16,7 +16,7 @@
         android:id="@+id/huanfu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="换肤"/>
+        android:text="@string/huanfu"/>
     <Button
         android:background="@color/text_bg_color"
         android:textColor="@color/text_color"
@@ -24,7 +24,7 @@
         android:id="@+id/chongzhi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="默认皮肤"/>
+        android:text="@string/morenpifu"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleview"
         android:background="@color/listview_bg_color"
