--- a/app/src/main/res/layout/activity_three.xml
+++ b/app/src/main/res/layout/activity_three.xml
@@ -19,7 +19,7 @@
             android:id="@+id/huanfu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="换肤"/>
+            android:text="@string/huanfu"/>
         <Button
             android:layout_marginStart="@dimen/dp_10"
             android:layout_marginEnd="@dimen/dp_10"
@@ -28,15 +28,61 @@
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="默认皮肤"/>
+            android:text="@string/morenpifu"/>
         <Button
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
             android:id="@+id/jumpList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="跳到列表"/>
+            android:text="@string/jumpToList"/>
+        <Button
+            android:layout_marginStart="@dimen/dp_10"
+            android:background="@color/text_bg_color"
+            android:textColor="@color/text_color"
+            android:id="@+id/jianfanti"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fanti"/>
+
     </LinearLayout>
+    <Button
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginStart="@dimen/dp_10"
+        android:background="@color/text_bg_color"
+        android:textColor="@color/text_color"
+        android:id="@+id/jianti"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/jianti"/>
+    <Button
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginStart="@dimen/dp_10"
+        android:background="@color/text_bg_color"
+        android:textColor="@color/text_color"
+        android:id="@+id/english"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/English"/>
+    <Button
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginStart="@dimen/dp_10"
+        android:background="@color/text_bg_color"
+        android:textColor="@color/text_color"
+        android:id="@+id/gensuixitong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/followSys"/>
+    <TextView
+        android:id="@+id/changeFontSize"
+        android:layout_marginTop="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/gy1"
+        android:background="@color/gy6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/settingFontSize"
+         />
     <TextView
         android:layout_marginTop="@dimen/dp_10"
         android:padding="@dimen/dp_10"
@@ -44,7 +90,7 @@
         android:background="@color/gy6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/test6"
          />
     <TextView
         android:layout_marginTop="@dimen/dp_10"
@@ -53,7 +99,7 @@
         android:background="@color/gy5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="@string/test2"
           />
 
 
@@ -63,7 +109,7 @@
         android:background="@mipmap/p_login_bg"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:text="Hello World!"
+        android:text="@string/test3"
           />
     <com.gyzq.skinengine.CircleImageView
         android:layout_marginTop="20dp"
@@ -75,13 +121,13 @@
     <TextView
         android:textColor="@color/text_color"
         android:layout_width="wrap_content"
-        android:text="这是自定义view圆形图片"
+        android:text="@string/test1"
         android:layout_height="wrap_content"/>
     <TextView
         android:drawableTop="@drawable/ic_mood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="国元点金"
+        android:text="@string/test2"
         android:layout_marginTop="20dp"
         android:textColor="@color/text_color"
         />
