--- a/app/src/main/res/layout/activity_three.xml
+++ b/app/src/main/res/layout/activity_three.xml
@@ -13,14 +13,18 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <Button
+            android:textAllCaps="false"
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
             android:id="@+id/huanfu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/huanfu"/>
+            android:text="@string/huanfu" />
+
         <Button
+            android:textAllCaps="false"
             android:layout_marginStart="@dimen/dp_10"
             android:layout_marginEnd="@dimen/dp_10"
             android:background="@color/text_bg_color"
@@ -28,25 +32,31 @@
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/morenpifu"/>
+            android:text="@string/morenpifu" />
+
         <Button
+            android:textAllCaps="false"
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
             android:id="@+id/jumpList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/jumpToList"/>
+            android:text="@string/jumpToList" />
+
         <Button
+            android:textAllCaps="false"
             android:layout_marginStart="@dimen/dp_10"
             android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
             android:id="@+id/jianfanti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/fanti"/>
+            android:text="@string/fanti" />
 
     </LinearLayout>
+
     <Button
+        android:textAllCaps="false"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginStart="@dimen/dp_10"
         android:background="@color/text_bg_color"
@@ -54,8 +64,10 @@
         android:id="@+id/jianti"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/jianti"/>
+        android:text="@string/jianti" />
+
     <Button
+        android:textAllCaps="false"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginStart="@dimen/dp_10"
         android:background="@color/text_bg_color"
@@ -63,8 +75,10 @@
         android:id="@+id/english"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/English"/>
+        android:text="@string/English" />
+
     <Button
+        android:textAllCaps="false"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_marginStart="@dimen/dp_10"
         android:background="@color/text_bg_color"
@@ -72,7 +86,8 @@
         android:id="@+id/gensuixitong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/followSys"/>
+        android:text="@string/followSys" />
+
     <TextView
         android:id="@+id/changeFontSize"
         android:layout_marginTop="@dimen/dp_10"
@@ -81,8 +96,8 @@
         android:background="@color/gy6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/settingFontSize"
-         />
+        android:text="@string/settingFontSize" />
+
     <TextView
         android:layout_marginTop="@dimen/dp_10"
         android:padding="@dimen/dp_10"
@@ -90,8 +105,8 @@
         android:background="@color/gy6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test6"
-         />
+        android:text="@string/test6" />
+
     <TextView
         android:layout_marginTop="@dimen/dp_10"
         android:padding="@dimen/dp_10"
@@ -99,9 +114,15 @@
         android:background="@color/gy5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test2"
-          />
-
+        android:text="@string/test2" />
+    <EditText
+        android:layout_marginTop="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
+        android:textColor="@color/gy2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/test5"
+         />
 
 
     <TextView
@@ -109,27 +130,27 @@
         android:background="@mipmap/p_login_bg"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:text="@string/test3"
-          />
+        android:text="@string/test3" />
+
     <com.gyzq.skinengine.CircleImageView
         android:layout_marginTop="20dp"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="centerCrop"
-        android:src="@mipmap/p_login_bg"
-         />
+        android:src="@mipmap/p_login_bg" />
+
     <TextView
         android:textColor="@color/text_color"
         android:layout_width="wrap_content"
         android:text="@string/test1"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
+
     <TextView
         android:drawableTop="@drawable/ic_mood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/test2"
         android:layout_marginTop="20dp"
-        android:textColor="@color/text_color"
-        />
+        android:textColor="@color/text_color" />
 
 </LinearLayout>
