--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -17,6 +17,7 @@
         android:orientation="horizontal">
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/jumpToTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,6 +26,7 @@
             android:textColor="@color/text_color" />
 
         <Button
+            android:textAllCaps="false"
             android:id="@+id/chongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,9 +36,10 @@
             android:textColor="@color/text_color" />
 
 
-
     </LinearLayout>
+
     <Button
+        android:textAllCaps="false"
         android:layout_marginTop="@dimen/dp_10"
         android:id="@+id/ziti"
         android:layout_width="wrap_content"
@@ -45,7 +48,9 @@
         android:background="@color/button_bg_color"
         android:text="@string/changeFont"
         android:textColor="@color/text_color" />
+
     <Button
+        android:textAllCaps="false"
         android:layout_marginTop="@dimen/dp_10"
         android:id="@+id/zitichongzhi"
         android:layout_width="wrap_content"
@@ -54,7 +59,9 @@
         android:background="@color/button_bg_color"
         android:text="@string/defalutFont"
         android:textColor="@color/text_color" />
+
     <Button
+        android:textAllCaps="false"
         android:layout_marginTop="@dimen/dp_10"
         android:id="@+id/huanfu"
         android:background="@color/text_bg_color"
@@ -62,18 +69,18 @@
         android:layout_marginStart="@dimen/dp_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/huanfu"/>
+        android:text="@string/huanfu" />
 
 
     <Button
+        android:textAllCaps="false"
         android:textColor="@color/text_color"
         android:background="@drawable/selector_white"
         android:padding="@dimen/dp_10"
         android:layout_marginTop="@dimen/dp_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/test6"
-        />
+        android:text="@string/test6" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -100,10 +107,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:layout_width="100dp"
         android:layout_height="200dp"
         android:src="@mipmap/p_login_bg" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -121,14 +130,15 @@
         android:layout_width="wrap_content"
         android:layout_height="100dp"
         android:orientation="horizontal">
+
         <TextView
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableTop="@drawable/ic_mood"
             android:text="国元点金"
-            android:textColor="@color/gy6"
-            />
+            android:textColor="@color/gy6" />
+
         <TextView
             android:layout_marginStart="@dimen/dp_10"
             android:layout_marginTop="20dp"
@@ -136,24 +146,23 @@
             android:layout_height="wrap_content"
             android:drawableBottom="@drawable/ic_mood"
             android:text="@string/guoyuandianjin"
-            android:textColor="@color/gy6"
-            />
+            android:textColor="@color/gy6" />
+
         <TextView
             android:layout_margin="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/ic_mood"
             android:text="@string/guoyuandianjin"
-            android:textColor="@color/gy6"
-            />
+            android:textColor="@color/gy6" />
+
         <TextView
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/ic_mood"
             android:text="@string/guoyuandianjin"
-            android:textColor="@color/gy6"
-            />
+            android:textColor="@color/gy6" />
     </LinearLayout>
 
 
