--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,127 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
     android:background="@color/layout_bg_color"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        android:gravity="center"
+        android:background="@color/layout_bg_color"
+        android:layout_height="wrap_content"
+        tools:context=".MainActivity">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:textAllCaps="false"
+                android:id="@+id/huanfu"
+                android:background="@color/text_bg_color"
+                android:textColor="@color/text_color"
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/huanfu" />
+
+            <Button
+                android:textAllCaps="false"
+                android:background="@color/text_bg_color"
+                android:textColor="@color/text_color"
+                android:layout_marginStart="@dimen/dp_10"
+                android:id="@+id/chongzhi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/morenpifu" />
+
+            <Button
+                android:textAllCaps="false"
+                android:background="@color/text_bg_color"
+                android:textColor="@color/text_color"
+                android:layout_marginStart="@dimen/dp_10"
+                android:id="@+id/jumpToStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/jumpTonext" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/jar_to_st"
+            android:textAllCaps="false"
+            android:textColor="@color/text_color"
+            android:background="@drawable/selector_white"
+            android:padding="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/jar_to_st" />
+
 
         <Button
             android:textAllCaps="false"
-            android:id="@+id/huanfu"
-            android:background="@color/text_bg_color"
             android:textColor="@color/text_color"
-            android:layout_marginStart="@dimen/dp_10"
+            android:background="@drawable/selector_white"
+            android:padding="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/huanfu" />
+            android:text="@string/test1" />
 
-        <Button
-            android:textAllCaps="false"
+        <TextView
             android:background="@color/text_bg_color"
-            android:textColor="@color/text_color"
-            android:layout_marginStart="@dimen/dp_10"
-            android:id="@+id/chongzhi"
+            android:id="@+id/jar_st_text"
+            android:layout_marginTop="@dimen/dp_10"
+            android:padding="@dimen/dp_10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/morenpifu" />
+            />
+        <TextView
+            android:layout_marginTop="@dimen/dp_10"
+            android:padding="@dimen/dp_10"
+            android:textColor="@color/gy1"
+            android:background="@color/gy6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/test2" />
 
-        <Button
-            android:textAllCaps="false"
-            android:background="@color/text_bg_color"
-            android:textColor="@color/text_color"
-            android:layout_marginStart="@dimen/dp_10"
-            android:id="@+id/jumpToStart"
+        <TextView
+            android:layout_marginTop="@dimen/dp_10"
+            android:padding="@dimen/dp_10"
+            android:textColor="@color/gy2"
+            android:background="@color/gy5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/jumpTonext" />
+            android:text="@string/test3" />
+
+        <TextView
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@mipmap/p_login_bg"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:gravity="center"
+            android:textColor="@color/text_color"
+            android:text="@string/test4" />
+
+        <ImageView
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="100dp"
+            android:layout_height="180dp"
+            android:src="@mipmap/p_login_bg" />
+
+        <TextView
+            android:layout_marginTop="@dimen/dp_10"
+            android:drawableTop="@drawable/ic_mood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/test5"
+            android:textColor="@color/gy7" />
+
+        <TextView
+            android:layout_marginTop="@dimen/dp_10"
+            android:drawableTop="@drawable/ic_mood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/test5"
+            android:textColor="@color/gy7" />
+
     </LinearLayout>
 
-    <Button
-        android:id="@+id/jar_to_st"
-        android:textAllCaps="false"
-        android:textColor="@color/text_color"
-        android:background="@drawable/selector_white"
-        android:padding="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/jar_to_st" />
-
-
-    <Button
-        android:textAllCaps="false"
-        android:textColor="@color/text_color"
-        android:background="@drawable/selector_white"
-        android:padding="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test1" />
-
-    <TextView
-        android:background="@color/text_bg_color"
-        android:id="@+id/jar_st_text"
-        android:layout_marginTop="@dimen/dp_10"
-        android:padding="@dimen/dp_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
-    <TextView
-        android:layout_marginTop="@dimen/dp_10"
-        android:padding="@dimen/dp_10"
-        android:textColor="@color/gy1"
-        android:background="@color/gy6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test2" />
-
-    <TextView
-        android:layout_marginTop="@dimen/dp_10"
-        android:padding="@dimen/dp_10"
-        android:textColor="@color/gy2"
-        android:background="@color/gy5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test3" />
-
-    <TextView
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@mipmap/p_login_bg"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:gravity="center"
-        android:textColor="@color/text_color"
-        android:text="@string/test4" />
-
-    <ImageView
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_width="100dp"
-        android:layout_height="180dp"
-        android:src="@mipmap/p_login_bg" />
-
-    <TextView
-        android:layout_marginTop="@dimen/dp_10"
-        android:drawableTop="@drawable/ic_mood"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test5"
-        android:textColor="@color/gy7" />
-
-    <TextView
-        android:layout_marginTop="@dimen/dp_10"
-        android:drawableTop="@drawable/ic_mood"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test5"
-        android:textColor="@color/gy7" />
-
-</LinearLayout>
+</ScrollView>
