--- a/app/src/main/res/layout/activity_two.xml
+++ b/app/src/main/res/layout/activity_two.xml
@@ -1,169 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/layout_bg_color"
     android:gravity="center"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-
     <LinearLayout
-        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@color/layout_bg_color"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-        <Button
-            android:textAllCaps="false"
-            android:id="@+id/jumpToTwo"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/button_bg_color"
-            android:text="@string/jumpToThree"
-            android:textColor="@color/text_color" />
+            android:orientation="horizontal">
+
+            <Button
+                android:textAllCaps="false"
+                android:id="@+id/jumpToTwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/button_bg_color"
+                android:text="@string/jumpToThree"
+                android:textColor="@color/text_color" />
+
+            <Button
+                android:textAllCaps="false"
+                android:id="@+id/chongzhi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:background="@color/button_bg_color"
+                android:text="@string/morenpifu"
+                android:textColor="@color/text_color" />
+
+
+        </LinearLayout>
 
         <Button
             android:textAllCaps="false"
-            android:id="@+id/chongzhi"
+            android:layout_marginTop="@dimen/dp_10"
+            android:id="@+id/ziti"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:background="@color/button_bg_color"
-            android:text="@string/morenpifu"
+            android:text="@string/changeFont"
             android:textColor="@color/text_color" />
 
-
-    </LinearLayout>
-
-    <Button
-        android:textAllCaps="false"
-        android:layout_marginTop="@dimen/dp_10"
-        android:id="@+id/ziti"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:background="@color/button_bg_color"
-        android:text="@string/changeFont"
-        android:textColor="@color/text_color" />
-
-    <Button
-        android:textAllCaps="false"
-        android:layout_marginTop="@dimen/dp_10"
-        android:id="@+id/zitichongzhi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:background="@color/button_bg_color"
-        android:text="@string/defalutFont"
-        android:textColor="@color/text_color" />
-
-    <Button
-        android:textAllCaps="false"
-        android:layout_marginTop="@dimen/dp_10"
-        android:id="@+id/huanfu"
-        android:background="@color/text_bg_color"
-        android:textColor="@color/text_color"
-        android:layout_marginStart="@dimen/dp_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/huanfu" />
-
-
-    <Button
-        android:textAllCaps="false"
-        android:textColor="@color/text_color"
-        android:background="@drawable/selector_white"
-        android:padding="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/test6" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@color/text_bg_color"
-        android:padding="@dimen/dp_10"
-        android:text="@string/test6"
-        android:textColor="@color/gy2"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@mipmap/p_login_bg"
-        android:text="@string/test4"
-        android:gravity="bottom|center"
-        android:textColor="@color/text_color"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="200dp"
-        android:src="@mipmap/p_login_bg" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:background="@color/gy6"
-        android:padding="@dimen/dp_10"
-        android:text="@string/test2"
-        android:textColor="@color/gy1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_marginTop="20dp"
+        <Button
+            android:textAllCaps="false"
+            android:layout_marginTop="@dimen/dp_10"
+            android:id="@+id/zitichongzhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_mood"
-            android:text="国元点金"
-            android:textColor="@color/gy6" />
+            android:layout_marginStart="5dp"
+            android:background="@color/button_bg_color"
+            android:text="@string/defalutFont"
+            android:textColor="@color/text_color" />
 
-        <TextView
+        <Button
+            android:textAllCaps="false"
+            android:layout_marginTop="@dimen/dp_10"
+            android:id="@+id/huanfu"
+            android:background="@color/text_bg_color"
+            android:textColor="@color/text_color"
             android:layout_marginStart="@dimen/dp_10"
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableBottom="@drawable/ic_mood"
-            android:text="@string/guoyuandianjin"
-            android:textColor="@color/gy6" />
+            android:text="@string/huanfu" />
+
+
+        <Button
+            android:textAllCaps="false"
+            android:textColor="@color/text_color"
+            android:background="@drawable/selector_white"
+            android:padding="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/test6" />
 
         <TextView
-            android:layout_margin="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_mood"
-            android:text="@string/guoyuandianjin"
-            android:textColor="@color/gy6" />
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/text_bg_color"
+            android:padding="@dimen/dp_10"
+            android:text="@string/test6"
+            android:textColor="@color/gy2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:layout_marginTop="20dp"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@mipmap/p_login_bg"
+            android:text="@string/test4"
+            android:gravity="bottom|center"
+            android:textColor="@color/text_color"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="200dp"
+            android:src="@mipmap/p_login_bg" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableEnd="@drawable/ic_mood"
-            android:text="@string/guoyuandianjin"
-            android:textColor="@color/gy6" />
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/gy6"
+            android:padding="@dimen/dp_10"
+            android:text="@string/test2"
+            android:textColor="@color/gy1"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="100dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableTop="@drawable/ic_mood"
+                android:text="国元点金"
+                android:textColor="@color/gy6" />
+
+            <TextView
+                android:layout_marginStart="@dimen/dp_10"
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableBottom="@drawable/ic_mood"
+                android:text="@string/guoyuandianjin"
+                android:textColor="@color/gy6" />
+
+            <TextView
+                android:layout_margin="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableStart="@drawable/ic_mood"
+                android:text="@string/guoyuandianjin"
+                android:textColor="@color/gy6" />
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_mood"
+                android:text="@string/guoyuandianjin"
+                android:textColor="@color/gy6" />
+        </LinearLayout>
+
+
     </LinearLayout>
 
-
-</LinearLayout>
+</ScrollView>
